# holochain-wasmer

./: .dockerignore  .gitignore  CHANGELOG-UNRELEASED.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  README.md  bench.sh  config.nix  default.nix  flake.nix  fuzz.sh  fuzzprep.sh  rust-toolchain.toml  shell.nix  test.sh
.circleci/: config.yml
.github/: pull_request_template.md
.github/manifest/: vcpkg-configuration.json  vcpkg.json
.github/workflows/: bench.yml  build.yml  mac.yml  mobile.yml  prepare-release.yml  test.yml  windows.yml
common/: Cargo.toml
common/src/: allocate.rs  allocation.rs  bits_n_pieces.rs  bytes.rs  error.rs  lib.rs  memory.rs
crates/common/: Cargo.toml
crates/common/src/: allocation.rs  fat_ptr.rs  json.rs  lib.rs  result.rs  scopetracker.rs  serialized_bytes.rs  slice.rs  string.rs
crates/guest/: Cargo.toml
crates/guest/src/: allocation.rs  guest.rs
crates/host/: Cargo.toml  build.rs
crates/host/src/: env.rs  error.rs  guest.rs  host.rs  import.rs  instantiate.rs  lib.rs  memory_cache.rs  module.rs  plru.rs  prelude.rs  store.rs
crates/host/src/module/: builder.rs  mod.rs  sys.rs  v8.rs  wasmer_sys.rs  wasmer_v8.rs  wasmer_wamr.rs  wasmer_wasmi.rs  wasmi.rs
guest/: Cargo.toml
guest/src/: allocate.rs  guest.rs
host/: Cargo.toml
host/src/: allocate.rs  allocation.rs  bytes.rs  call.rs  guest.rs  host.rs  import.rs  load_wasm.rs
nix/: sources.json
release/: default.nix
release/version/: default.nix
scripts/: bench-wasmer-sys-cranelift.sh  bench-wasmer-sys-llvm.sh  bench-wasmer-v8.sh  bench-wasmer-wasmi.sh  bench-wasmer_sys.sh  bench-wasmer_sys_cranelift.sh  bench-wasmer_sys_dev.sh  bench-wasmer_sys_llvm.sh  bench-wasmer_sys_prod.sh  bench-wasmer_v8.sh  bench-wasmer_wamr.sh  bench-wasmer_wasmi.sh  bench.sh  bump_version.sh  fuzz-wasmer_sys.sh  fuzz-wasmer_sys_dev.sh  fuzz-wasmer_sys_prod.sh  fuzz-wasmer_v8.sh  fuzz-wasmer_wamr.sh  fuzz.sh  publish.sh  test-wasmer-sys-cranelift.sh  test-wasmer-sys-llvm.sh  test-wasmer-v8.sh  test-wasmer-wasmi.sh  test-wasmer_sys.sh  test-wasmer_sys_cranelift.sh  test-wasmer_sys_dev.sh  test-wasmer_sys_llvm.sh  test-wasmer_sys_prod.sh  test-wasmer_v8.sh  test-wasmer_wamr.sh  test-wasmer_wasmi.sh  test.sh
test/: Cargo.toml  build.rs
test-crates/common/: Cargo.toml
test-crates/common/src/: common.rs
test-crates/tests/: Cargo.toml  build.rs
test-crates/tests/benches/: bench.rs
test-crates/tests/src/: import.rs  test.rs  wasms.rs
test-crates/wasm_core/: Cargo.toml
test-crates/wasm_empty/: Cargo.toml
test-crates/wasm_empty/src/: wasm.rs
test-crates/wasm_io/src/: wasm.rs
test-crates/wasm_memory/: Cargo.toml
test-crates/wasms/wasm_core/: Cargo.toml
test-crates/wasms/wasm_core/src/: wasm.rs
test-crates/wasms/wasm_empty/: Cargo.toml
test-crates/wasms/wasm_io/: Cargo.toml
test-crates/wasms/wasm_memory/: Cargo.toml
test-crates/wasms/wasm_memory/src/: wasm.rs
test/benches/: allocation.rs  bench.rs
test/common/: Cargo.toml
test/common/src/: common.rs
test/src/: import.rs  load_wasm.rs  test.rs  wasms.rs
test/test_wasm/: Cargo.toml
test/test_wasm/src/: wasm.rs
test/wasm/: Cargo.toml
test/wasm/src/: wasm.rs
test/wasm_empty/: Cargo.toml
test/wasm_empty/src/: wasm.rs
test/wasm_io/: Cargo.toml
test/wasm_io/src/: wasm.rs
test/wasm_memory/: Cargo.toml
test/wasm_memory/src/: wasm.rs
test/wasm_noop/: Cargo.toml
test/wasm_noop/src/: wasm.rs
