[workspace]
members = [
    "crates/*",
    "test-crates/tests",
    "test-crates/common",
    "test-crates/wasms/*",
]
default-members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.0.102"
homepage = "https://holochain.org"
repository = "https://github.com/holochain/holochain-wasmer"
license = "Apache-2.0"
authors = [
    "Holochain Core Dev Team <devcore@holochain.org>",
    "thedavidmeister",
    "thedavidmeister@gmail.com",
]
edition = "2021"

[workspace.dependencies]
holochain_serialized_bytes = "=0.0.57"
serde = "1"
thiserror = "2"
serde_bytes = "0.11"
tracing = "0.1"
paste = "1.0"
parking_lot = "0.12"
bimap = "0.6"
bytes = "1"
hex = "0.4"
wasmer = { version = "7.1.0", default-features = false }
wasmer-middlewares = { version = "7.1.0" }

holochain_wasmer_common = { version = "=0.0.102", path = "crates/common" }
holochain_wasmer_guest = { version = "=0.0.102", path = "crates/guest" }
holochain_wasmer_host = { version = "=0.0.102", path = "crates/host", default-features = false }

# Dev dependencies
test-fuzz = "7.2"
tempfile = "3.14.0"
criterion = { version = "0.6" }
rand = { version = "0.9" }
once_cell = "1"
env_logger = "0.11"
ctor = "0.4"

test_common = { path = "test-crates/common" }

[profile.release.package.tests]
debug = true
