[workspace]
members = [
    "crates/*",
    "test-crates/tests",
    "test-crates/common",
    "test-crates/wasms/*",
]
default-members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.0.103"
homepage = "https://holochain.org"
repository = "https://github.com/holochain/holochain-wasmer"
license = "Apache-2.0"
authors = [
    "Holochain Core Dev Team <devcore@holochain.org>",
    "thedavidmeister",
    "thedavidmeister@gmail.com",
]
edition = "2021"

[workspace.dependencies]
holochain_serialized_bytes = "=0.0.57"
serde = "1"
thiserror = "2"
serde_bytes = "0.11"
tracing = "0.1"
paste = "1.0"
parking_lot = "0.12"
bimap = "0.6"
bytes = "1"
hex = "0.4"
wasmer = { version = "7.2.0-alpha.1", default-features = false }
wasmer-middlewares = { version = "7.2.0-alpha.1" }

holochain_wasmer_common = { version = "=0.0.103", path = "crates/common" }
holochain_wasmer_guest = { version = "=0.0.103", path = "crates/guest" }
holochain_wasmer_host = { version = "=0.0.103", path = "crates/host", default-features = false }

# Dev dependencies
tempfile = "3.14.0"
criterion = { version = "0.6" }
rand = { version = "0.9" }
once_cell = "1"
env_logger = "0.11"
ctor = "0.4"

test_common = { path = "test-crates/common" }

[profile.release.package.tests]
debug = true

# Point wasmer at the synchwire fork so we pick up the iOS V8 target
# plus the Engine::set_flags_from_string plumbing that lets the
# embedder request --jitless on iOS. The fork has no published
# crates.io release (and we don't plan to ship one), so wasmer's full
# workspace gets patched in via git rather than a version bump.
[patch.crates-io]
wasmer = { git = "https://github.com/synchwire/wasmer.git", branch = "main" }
wasmer-middlewares = { git = "https://github.com/synchwire/wasmer.git", branch = "main" }
wasmer-compiler = { git = "https://github.com/synchwire/wasmer.git", branch = "main" }
wasmer-compiler-cranelift = { git = "https://github.com/synchwire/wasmer.git", branch = "main" }
wasmer-compiler-llvm = { git = "https://github.com/synchwire/wasmer.git", branch = "main" }
wasmer-compiler-singlepass = { git = "https://github.com/synchwire/wasmer.git", branch = "main" }
wasmer-derive = { git = "https://github.com/synchwire/wasmer.git", branch = "main" }
wasmer-types = { git = "https://github.com/synchwire/wasmer.git", branch = "main" }
wasmer-vm = { git = "https://github.com/synchwire/wasmer.git", branch = "main" }
