[package]
name = "test"
version = "0.0.90"
authors = ["thedavidmeister", "thedavidmeister@gmail.com"]
edition = "2021"

[dependencies]
holochain_wasmer_common = { path = "../crates/common", features = [] }
holochain_wasmer_host = { path = "../crates/host" }
holochain_serialized_bytes = "=0.0.55"
serde = "1"
test_common = { path = "./common" }
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"
serde_bytes = "0.11"
parking_lot = "0.12"
wasmer = "=4.3.1"
wasmer-middlewares = "=4.3.1"
test-fuzz = "=3.0.4"
once_cell = "1"
tempfile = "3"

[dev-dependencies]
env_logger = "0.8"
ctor = "0.1"

[[bench]]
name = "bench"
harness = false

[lib]
name = "test"
crate-type = ["cdylib", "rlib"]
path = "src/test.rs"

[profile.release]
debug = true

[features]
debug_memory = ["holochain_wasmer_host/debug_memory"]
