[package]
name = "test"
version = "0.0.90"
authors = ["thedavidmeister", "thedavidmeister@gmail.com"]
edition = "2021"

[dependencies]
holochain_wasmer_common = { path = "../crates/common" }
holochain_wasmer_host = { path = "../crates/host", default-features = false }
holochain_serialized_bytes = "=0.0.55"
serde = "1"
test_common = { path = "./common", default-features = false }
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"
serde_bytes = "0.11"
parking_lot = "0.12"
wasmer = { git = "https://github.com/wasmerio/wasmer.git", rev = "1ee96a2", package = "wasmer", default-features = false }
test-fuzz = "=3.0.4"
once_cell = "1"
tempfile = "3"

wasmer-middlewares = { git = "https://github.com/wasmerio/wasmer.git", rev = "1ee96a2", package = "wasmer-middlewares", optional = true }

[dev-dependencies]
env_logger = "0.8"
ctor = "0.1"

[[bench]]
name = "bench"
harness = false

[lib]
name = "test"
crate-type = ["cdylib", "rlib"]
path = "src/test.rs"

[profile.release]
debug = true

[features]
debug_memory = ["holochain_wasmer_host/debug_memory"]
default = ["wasmer_sys"]
wasmer_sys = ["wasmer-middlewares", "wasmer/default", "holochain_wasmer_host/wasmer_sys"]
wasmer_wamr = ["wasmer/wamr", "holochain_wasmer_host/wasmer_wamr"]