[package]
name = "test"
version = "0.0.90"
authors = ["thedavidmeister", "thedavidmeister@gmail.com"]
edition = "2021"

[dependencies]
holochain_wasmer_common = { path = "../crates/common" }
holochain_wasmer_host = { path = "../crates/host", default-features = false, features = ["error_as_host"] }
holochain_serialized_bytes = "=0.0.55"
serde = "1"
test_common = { path = "./common", default-features = false }
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"
serde_bytes = "0.11"
parking_lot = "0.12"
test-fuzz = "=6.0.0"
once_cell = "1"
tempfile = "3"

wasmer = { version = "5.0.1", default-features = false }
wasmer-middlewares = { version = "5.0.1", optional = true }

[dev-dependencies]
env_logger = "0.8"
ctor = "0.1"

[[bench]]
name = "bench"
harness = false

[lib]
name = "test"
crate-type = ["cdylib", "rlib"]
path = "src/test.rs"

[profile.release]
debug = true

[features]
debug_memory = ["holochain_wasmer_host/debug_memory"]
default = ["wasmer_sys_dev"]
wasmer_sys = [
  "dep:wasmer-middlewares",
  "wasmer/sys",
]
wasmer_sys_dev = [
  "wasmer_sys",
  "wasmer/default",
  "holochain_wasmer_host/wasmer_sys_dev"
]
wasmer_sys_prod = [
  "wasmer_sys",
  "holochain_wasmer_host/wasmer_sys_prod"
]
wasmer_wamr = [
  "wasmer/wamr",
  "holochain_wasmer_host/wasmer_wamr"
]