[package]
name = "holochain_wasmer_common"
description = "commons for both host and guest"
license = "Apache-2.0"
version = "0.0.100"
authors = ["thedavidmeister", "thedavidmeister@gmail.com"]
edition = "2021"

[dependencies]
holochain_serialized_bytes = "=0.0.55"
serde = "1"
thiserror = "2"
serde_bytes = "0.11"
test-fuzz = { version = "6.0.0", optional = true }

[dev-dependencies]
holochain_wasmer_common = { path = ".", features = ["fuzzing"] }

[features]
error_as_host = []
fuzzing = ["dep:test-fuzz"]
