[package]
name = "holochain_wasmer_common"
version.workspace = true
description = "commons for both host and guest"
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
holochain_serialized_bytes.workspace = true
serde .workspace = true
thiserror.workspace = true
serde_bytes.workspace = true
test-fuzz = { workspace = true, optional = true }

[dev-dependencies]
holochain_wasmer_common = { path = ".", features = ["fuzzing"] }

[features]
error_as_host = []
fuzzing = ["dep:test-fuzz"]
