[package]
name = "holochain_wasmer_common"
version.workspace = true
description = "commons for both host and guest"
documentation = "https://docs.rs/holochain_wasmer_common"
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
holochain_serialized_bytes.workspace = true
serde.workspace = true
thiserror.workspace = true
serde_bytes.workspace = true

[features]
error_as_host = []
