[package]
name = "holochain_wasmer_guest"
description = "wasm guest code"
license = "Apache-2.0"
version = "0.0.96"
authors = ["thedavidmeister", "thedavidmeister@gmail.com"]
edition = "2021"

[workspace]

[lib]
name = "holochain_wasmer_guest"
crate-type = ["cdylib", "rlib"]
path = "src/guest.rs"

[dependencies]
holochain_serialized_bytes = "=0.0.55"
holochain_wasmer_common = { version = "=0.0.96", path = "../common" }
serde = "1"
tracing = "0.1"
paste = "1.0"

[dev-dependencies]
holochain_wasmer_common = { version = "=0.0.96", path = "../common", features = ["fuzzing"] }
test-fuzz = "6.0.0"
