[package]
name = "holochain_wasmer_guest"
version.workspace = true
description = "wasm guest code"
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
name = "holochain_wasmer_guest"
crate-type = ["cdylib", "rlib"]
path = "src/guest.rs"

[dependencies]
holochain_serialized_bytes.workspace = true
holochain_wasmer_common.workspace = true
serde.workspace = true
tracing.workspace = true
paste.workspace = true

[dev-dependencies]
holochain_wasmer_common = { workspace = true, features = [
    "fuzzing",
] }
test-fuzz.workspace = true
