[package]
name = "holochain_wasmer_host"
version.workspace = true
description = "wasm host code"
documentation = "https://docs.rs/holochain_wasmer_host"
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
name = "holochain_wasmer_host"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
wasmer.workspace = true
wasmer-middlewares = { workspace = true, optional = true }

holochain_wasmer_common.workspace = true
holochain_serialized_bytes.workspace = true
serde.workspace = true
tracing.workspace = true
parking_lot.workspace = true
bimap.workspace = true
bytes.workspace = true
hex.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true

[package.metadata.docs.rs]
# Build docs with the sys backend visible so intra-doc links to
# `module::sys::*` resolve. The LLVM compiler sub-feature is
# intentionally omitted because `llvm-sys` requires a prebuilt LLVM
# toolchain that the docs.rs builder doesn't provide. `wasmer-v8`
# is also omitted because wasmer's v8 build.rs downloads a prebuilt
# V8 tarball at compile time and shells out to llvm-objcopy —
# neither of which the docs.rs builder can be relied on to supply.
features = ["error-as-host", "wasmer-sys", "wasmer-sys-cranelift"]
no-default-features = true

[features]
default = ["error-as-host", "wasmer-sys", "wasmer-sys-cranelift"]
debug-memory = []
error-as-host = ["holochain_wasmer_common/error-as-host"]

# The sys backend uses wasmer's native compilation pipeline. Enable at least
# one of the compiler sub-features below alongside `wasmer-sys` to actually
# get a working sys backend.
wasmer-sys = ["dep:wasmer-middlewares", "wasmer/sys"]
wasmer-sys-cranelift = ["wasmer-sys", "wasmer/cranelift", "wasmer/wat"]
wasmer-sys-llvm = ["wasmer-sys", "wasmer/llvm", "wasmer/wat"]

# The V8 backend links wasmer against Google's V8 engine via the wee8
# C API. It is the only non-JIT-friendly wasmer backend that survives
# after wasmerio/wasmer#6500 dropped both WAMR and wasmi, and is what
# makes iOS support possible (V8 + `--jitless`). Independent of the
# sys backend — both can be enabled simultaneously and selected at
# runtime via the appropriate engine factory in `module::sys` or
# `module::v8`.
wasmer-v8 = ["wasmer/v8", "wasmer/wat"]
