[package]
name = "test_common"
version = "0.0.90"
authors.workspace = true
edition.workspace = true
publish = false

[lib]
name = "test_common"
crate-type = [ "cdylib", "rlib" ]
path = "src/common.rs"

[dependencies]
holochain_wasmer_common.workspace = true
serde.workspace = true
serde_bytes.workspace = true
