[package]
name = "tests"
version = "0.0.90"
authors.workspace = true
edition.workspace = true
publish = false

[dependencies]
holochain_wasmer_host = { workspace = true, default-features = false, features = ["error_as_host"] }
holochain_serialized_bytes.workspace = true
serde.workspace = true
test_common.workspace = true
criterion = { workspace = true, features = ["html_reports"] }
rand = { workspace = true, features = ["std_rng"] }
parking_lot.workspace = true
test-fuzz.workspace = true
once_cell.workspace = true
tempfile.workspace = true

wasmer = { workspace = true, default-features = false }
wasmer-middlewares = { workspace = true, optional = true }

[dev-dependencies]
env_logger.workspace = true
ctor.workspace = true

[[bench]]
name = "bench"
harness = false

[lib]
name = "test"
crate-type = ["cdylib", "rlib"]
path = "src/test.rs"

[features]
debug_memory = ["holochain_wasmer_host/debug_memory"]
default = ["wasmer_sys_dev"]
wasmer_sys = [
  "dep:wasmer-middlewares",
  "wasmer/sys",
]
wasmer_sys_dev = [
  "wasmer_sys",
  "wasmer/default",
  "holochain_wasmer_host/wasmer_sys_dev"
]
wasmer_sys_prod = [
  "wasmer_sys",
  "holochain_wasmer_host/wasmer_sys_prod"
]
wasmer_wamr = [
  "wasmer/wamr",
  "holochain_wasmer_host/wasmer_wamr"
]
wasmer_wasmi = [
  "wasmer/wasmi",
  "holochain_wasmer_host/wasmer_wasmi"
]
