[package]
name = "tests"
version = "0.0.90"
authors.workspace = true
edition.workspace = true
publish = false

[dependencies]
holochain_wasmer_host = { workspace = true, default-features = false, features = ["error-as-host"] }
holochain_serialized_bytes.workspace = true
serde.workspace = true
test_common.workspace = true
criterion = { workspace = true, features = ["html_reports"] }
rand = { workspace = true, features = ["std_rng"] }
parking_lot.workspace = true
once_cell.workspace = true
tempfile.workspace = true

wasmer = { workspace = true, default-features = false }
wasmer-middlewares = { workspace = true, optional = true }

[dev-dependencies]
env_logger.workspace = true
ctor.workspace = true

[[bench]]
name = "bench"
harness = false

[lib]
name = "test"
crate-type = ["cdylib", "rlib"]
path = "src/test.rs"

[features]
debug-memory = ["holochain_wasmer_host/debug-memory"]
default = ["wasmer-sys", "wasmer-sys-cranelift"]
wasmer-sys = [
  "dep:wasmer-middlewares",
  "wasmer/sys",
  "holochain_wasmer_host/wasmer-sys",
]
wasmer-sys-cranelift = [
  "wasmer-sys",
  "wasmer/cranelift",
  "wasmer/wat",
  "holochain_wasmer_host/wasmer-sys-cranelift",
]
wasmer-sys-llvm = [
  "wasmer-sys",
  "wasmer/llvm",
  "wasmer/wat",
  "holochain_wasmer_host/wasmer-sys-llvm",
]
wasmer-wasmi = [
  "wasmer/wasmi",
  "holochain_wasmer_host/wasmer-wasmi",
]
