[package]
name = "test_common"
version = "0.0.89"
authors = [ "thedavidmeister", "thedavidmeister@gmail.com" ]
edition = "2021"

[lib]
name = "test_common"
crate-type = [ "cdylib", "rlib" ]
path = "src/common.rs"

[dependencies]
holochain_wasmer_common = { path = "../../crates/common" }
serde = "1"
serde_bytes = "0.11"
