[package]
name = "test_common"
version = "0.0.90"
authors = [ "thedavidmeister", "thedavidmeister@gmail.com" ]
edition = "2021"

[lib]
name = "test_common"
crate-type = [ "cdylib", "rlib" ]
path = "src/common.rs"

[dependencies]
holochain_wasmer_common = { path = "../../crates/common", default-features = false }
serde = "1"
serde_bytes = "0.11"

[features]
default = ["wasmer_sys"]
wasmer_sys = ["holochain_wasmer_common/wasmer_sys"]
wasmer_wamr = ["holochain_wasmer_common/wasmer_wamr"]