[package]
name = "test_wasm"
version = "0.0.52"
authors = [ "thedavidmeister", "thedavidmeister@gmail.com" ]
edition = "2018"

[lib]
name = "test_wasm"
crate-type = [ "cdylib", "rlib" ]
path = "src/wasm.rs"

[dependencies]
holochain_wasmer_guest = { path = "../../crates/guest" }
test_common = { version = "=0.0.52", path = "../common" }
holochain_serialized_bytes = "=0.0.47"
serde = "=1.0.104"
