[package]
name = "test_wasm"
version = "0.0.15"
authors = [ "thedavidmeister", "thedavidmeister@gmail.com" ]
edition = "2018"

[lib]
name = "test_wasm"
crate-type = [ "cdylib", "rlib" ]
path = "src/wasm.rs"

[dependencies]
wee_alloc = "=0.4.5"
holochain_wasmer_guest = { version = "=0.0.15", path = "../../crates/guest" }
test_common = { version = "=0.0.15", path = "../common" }
holochain_json_api = "=0.0.23"
