[package]
name = "test_wasm_empty"
version = "0.0.90"
authors = [ "thedavidmeister", "thedavidmeister@gmail.com" ]
edition = "2021"

[lib]
name = "test_wasm_empty"
crate-type = [ "cdylib", "rlib" ]
path = "src/wasm.rs"

[dependencies]
holochain_wasmer_guest = { path = "../../crates/guest", default-features = false}

[features]
default = ["wasmer_sys"]
wasmer_sys = ["holochain_wasmer_guest/wasmer_sys"]
wasmer_wamr = ["holochain_wasmer_guest/wasmer_wamr"]