[package]
name = "test_wasm_io"
version = "0.0.87"
authors = [ "thedavidmeister", "thedavidmeister@gmail.com" ]
edition = "2021"

[lib]
name = "test_wasm_io"
crate-type = [ "cdylib", "rlib" ]
path = "src/wasm.rs"

[dependencies]
holochain_wasmer_guest = { path = "../../crates/guest" }
test_common = { path = "../common" }
holochain_serialized_bytes = "=0.0.53"
paste = "0.1"
serde = "1"
