[package]
name = "test_wasm_memory"
version = "2"
authors = [ "thedavidmeister", "thedavidmeister@gmail.com" ]
edition = "2018"

[lib]
name = "test_wasm_memory"
crate-type = [ "cdylib", "rlib" ]
path = "src/wasm.rs"

[dependencies]
holochain_wasmer_guest = { path = "../../crates/guest" }
test_common = { version = "=0.0.72", path = "../common" }
holochain_serialized_bytes = "=0.0.50"
paste = "0.1.16"
serde = "=1.0.123"
