[package]
name = "test_wasm_noop"
version = "0.0.31"
authors = [ "thedavidmeister", "thedavidmeister@gmail.com" ]
edition = "2018"

[lib]
name = "test_wasm_noop"
crate-type = [ "cdylib", "rlib" ]
path = "src/wasm.rs"

[dependencies]
wee_alloc = "=0.4.5"
holochain_wasmer_guest = { path = "../../crates/guest" }
