[package]
name = "test_wasm_io"
version = "0.0.90"
authors = ["thedavidmeister", "thedavidmeister@gmail.com"]
edition = "2021"

[lib]
name = "test_wasm_io"
crate-type = ["cdylib", "rlib"]
path = "src/wasm.rs"

[dependencies]
holochain_wasmer_guest = { workspace = true }
test_common = { workspace = true, default-features = false}
holochain_serialized_bytes = { workspace = true }
paste = "0.1"
serde = "1"
