[package]
name = "test_wasm_io"
version = "0.0.90"
authors.workspace = true
edition.workspace = true
publish = false

[lib]
name = "test_wasm_io"
crate-type = ["cdylib", "rlib"]
path = "src/wasm.rs"

[dependencies]
holochain_wasmer_guest.workspace = true
test_common.workspace = true
holochain_serialized_bytes.workspace = true
paste.workspace = true
